--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,16 @@ dist
 dist-ssr
 *.local
 
+# Build artifacts
+build/
+.cache/
+
+# Test artifacts
+coverage/
+test-results/
+playwright-report/
+playwright/.cache/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
