--- a/package.json
+++ b/package.json
@@ -6,10 +6,33 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "npm run test:unit && npm run test:integration && npm run test:e2e",
+    "test:unit": "vitest run src/js",
+    "test:integration": "vitest run src/tests/integration",
+    "test:e2e": "playwright test src/tests/e2e",
+    "test:coverage": "vitest run --coverage src/js",
+    "type-check": "tsc --noEmit",
+    "lint": "eslint src --ext .ts",
+    "format": "prettier --write src",
+    "format:check": "prettier --check src",
+    "validate": "npm run format:check && npm run lint && npm run type-check && npm run test"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
+    "@playwright/test": "^1.57.0",
+    "@types/node": "^25.0.9",
+    "@typescript-eslint/eslint-plugin": "^8.53.0",
+    "@typescript-eslint/parser": "^8.53.0",
+    "@vitest/browser": "^4.0.17",
+    "@vitest/coverage-v8": "^4.0.17",
+    "eslint": "^9.39.2",
+    "jsdom": "^27.4.0",
+    "playwright": "^1.57.0",
+    "prettier": "^3.8.0",
     "typescript": "~5.9.3",
-    "vite": "^7.2.4"
+    "typescript-eslint": "^8.53.0",
+    "vite": "^7.2.4",
+    "vitest": "^4.0.17"
   }
 }
